[1] restructure [2] replace "signal() with sigaction()" [3] process blank lines

--- a/LAB2/Makefile
+++ b/LAB2/Makefile
@@ -1,6 +1,6 @@
 tsh: main.c
-	#gcc -g main.c -o tsh
-	gcc -g -lreadline main.c -o tsh
+	gcc -g main.c -o tsh
+	#gcc -g -lreadline main.c -o tsh
 
 clean:
 	rm tsh
