Add make dist, make install, make uninstall to Makefile

--- a/LAB2/Makefile
+++ b/LAB2/Makefile
@@ -24,3 +24,24 @@ tsh: ${OBJ}
 
 clean:
 	rm -f tsh ${OBJ}
+
+dist: clean
+	mkdir -p tsh-${VERSION}
+	cp -R LICENSE Makefile README.md config.mk ${SRC} tsh-${VERSION}
+	tar -cf tsh-${VERSION}.tar tsh-${VERSION}
+	gzip tsh-${VERSION}.tar
+	rm -rf tsh-${VERSION}
+
+install: all
+	mkdir -p ${DESTDIR}${PREFIX}/bin
+	cp -f tsh ${DESTDIR}${PREFIX}/bin
+	chmod 755 ${DESTDIR}${PREFIX}/bin/tsh
+	mkdir -p ${DESTDIR}${MANPREFIX}/man1
+	sed "s/VERSION/${VERSION}/g" < tsh.1 > ${DESTDIR}${MANPREFIX}/man1/tsh.1
+	chmod 644 ${DESTDIR}${MANPREFIX}/man1/tsh.1
+
+uninstall:
+	rm -f ${DESTDIR}${PREFIX}/bin/tsh\
+		${DESTDIR}${MANPREFIX}/man1/tsh.1
+
+.PHONY: all options clean dist install uninstall
