[1] add logo, [2] format man pages

--- a/LAB2/Makefile
+++ b/LAB2/Makefile
@@ -27,7 +27,7 @@ clean:
 
 dist: clean
 	mkdir -p tsh-${VERSION}
-	cp -R LICENSE Makefile README.md config.mk ${SRC} tsh-${VERSION}
+	cp -R LICENSE Makefile README.md config.mk ${SRC} tsh.png tsh-${VERSION}
 	tar -cf tsh-${VERSION}.tar tsh-${VERSION}
 	gzip tsh-${VERSION}.tar
 	rm -rf tsh-${VERSION}
